bin/docker/k8s/legacy-ingress/countly-ingress-gce.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: countly-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "countly-static-ip"
spec:
  tls:
  - hosts:
    - YOUR_HOSTNAME                     # countly.example.com
    secretName: countly-tls
  rules:
  - http:
      paths:
      - path: /i
        backend:
          serviceName: countly-api
          servicePort: 3001
      - path: /i/*
        backend:
          serviceName: countly-api
          servicePort: 3001
      - path: /o
        backend:
          serviceName: countly-api
          servicePort: 3001
      - path: /o/*
        backend:
          serviceName: countly-api
          servicePort: 3001
      - path: /*
        backend:
          serviceName: countly-frontend
          servicePort: 6001
